@@ -1,4 +1,8 @@
-﻿drkns 07.12.2015 21:03:09 +0200 - build 4465
+﻿shmuel 07.12.2015 21:04:04 +0200 - build 4466
+
+1. M#3129: Несколько строк склеивается в одну
+
+drkns 07.12.2015 21:03:09 +0200 - build 4465
 
 1. Уточнение 4461.
 
